fix crash in switching session with multiple mainwindows (by using a Qt::QueuedConnection for the action invocation)

BUG: 227008

svn path=/trunk/KDE/kdesdk/kate/; revision=1090938